# todolist

./: .dockerignore  CLAUDE.md  Dockerfile  app.py  database.py  docker-compose.yml  keywords.py  models.py  pyproject.toml  render.yaml  requirements.txt  start.bat
routes/: api.py  pages.py
static/css/: style.css
static/js/: app.js  stats.js
templates/: admin.html  base.html  index.html  login.html  register.html  stats.html
