[project]
name = "todolist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "jinja2>=3.1",
    "uvicorn>=0.30",
    "pymysql>=1.1",
    "cryptography>=41.0",
    "bcrypt>=4.0",
    "python-multipart>=0.0.20",
    "itsdangerous>=2.0",
]
